tests/pass/handle-fun-param.mle
type unit = Unit
eff gen [a] = yield : a => unit

val f : [](<gen int>{unit} -> unit)
let f g = handle g! with
  | return _ => ()
  | yield _ k => ()
  end
