tests/fail/handle-fun-mismatch.mle
type unit = Unit
eff gen [a] = yield : a => unit

val f : [](<gen int>{unit} -> unit)
let f g = handle<gen unit> g! with
  | return _ => ()
  | yield x k => x
  end
